# bfmix

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  hf-sync.yml
.streamlit/: config.toml
bfmix/: __init__.py  atoms.py  geometry.py  mixture.py  potentials.py
bfmix/solvers/: __init__.py  ite.py
bfmix/utils/: __init__.py  plotting.py
examples/: run_mixture.py
tests/: test_bfmix.py
webapp/: app.py
